--- a/gem-puzzle/package.json
+++ b/gem-puzzle/package.json
@@ -10,7 +10,7 @@
     "watch": "webpack --watch",
     "serve": "webpack serve"
   },
-  "devDependencies": {
+  "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
     "@webpack-cli/generators": "^2.5.0",
@@ -28,6 +28,7 @@
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
     "style-loader": "^3.3.1",
+    "superstruct": "^0.16.5",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
     "webpack": "^5.74.0",
