--- a/gem-puzzle/package.json
+++ b/gem-puzzle/package.json
@@ -22,6 +22,7 @@
     "eslint-webpack-plugin": "^3.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
+    "normalize.css": "^8.0.1",
     "postcss": "^8.4.18",
     "postcss-loader": "^7.0.1",
     "prettier": "^2.7.1",
