--- a/gem-puzzle/package.json
+++ b/gem-puzzle/package.json
@@ -20,6 +20,7 @@
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-webpack-plugin": "^3.2.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "normalize.css": "^8.0.1",
